using Itmo.ObjectOrientedProgramming.Lab1.Models.DefaultProps;

namespace Itmo.ObjectOrientedProgramming.Lab1.Entities.Deflectors;

public class Class1Deflector : DeflectorBase
{
    public Class1Deflector()
        : base(DefaultDeflectorProps.Class1DeflectorHitPoints)
    {
    }
}