using Itmo.ObjectOrientedProgramming.Lab1.Models.DefaultProps;

namespace Itmo.ObjectOrientedProgramming.Lab1.Entities.Deflectors;

public class Class2Deflectors : DeflectorBase
{
    public Class2Deflectors()
        : base(DefaultDeflectorProps.Class2DeflectorHitPoints)
    {
    }
}