using System;
using Itmo.ObjectOrientedProgramming.Lab1.Models;
using Itmo.ObjectOrientedProgramming.Lab1.Models.DefaultProps;
using Itmo.ObjectOrientedProgramming.Lab1.Models.Environments;

namespace Itmo.ObjectOrientedProgramming.Lab1.Entities.Engines.JumpEngine;

public class AlphaEngine : JumpEngineBase
{
    public AlphaEngine()
        : base(
            DefaultEngineProps.AlphaEngineFuelConsumption,
            DefaultEngineProps.AlphaEngineVelocity)
    {
    }

    public override int DrivingReserve => DefaultEngineProps.AlphaEngineDrivingReserve;

    public override int GetFuelToCross(Path path)
    {
        path = path ?? throw new ArgumentNullException(nameof(path));
        return FuelConsumption * path.Distance;
    }

    public override bool CanMoveInPath(Path path)
    {
        path = path ?? throw new ArgumentNullException(nameof(path));

        return path.Environment switch
        {
            HighDensityNebulae env => DrivingReserve >= path.Distance,
            Space => false,
            NitrinoNebulae => false,
            _ => false,
        };
    }
}