using Itmo.ObjectOrientedProgramming.Lab1.Models.DefaultProps;

namespace Itmo.ObjectOrientedProgramming.Lab1.Entities.Deflectors;

public class Class3Deflector : DeflectorBase
{
    public Class3Deflector()
        : base(DefaultDeflectorProps.Class3DeflectorHitPoints)
    {
    }
}